packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/prefix_06.py
from gumicorn.config import Config
from gumicorn.http.errors import InvalidHTTPVersion

cfg = Config()
request = InvalidHTTPVersion
